data/derived/fa15/progs/unify/prog1058.ml.out
Characters 101-106:
  assoc (d,k,l');;
  ^^^^^
Error: This expression has type 'a * 'b * ('b * ('c -> 'd -> 'e)) list -> 'a
       but an expression was expected of type 'c
       The type variable 'c occurs inside
       'a * 'b * ('b * ('c -> 'd -> 'e)) list -> 'a
